# Ballista

./: README.md  pyproject.toml
examples/: astro_definition.json  labeled_matrix_definition.json  population_search_definition.json  run_astro_demo.py  run_contract_demo.py  run_definition_demo.py  run_matrix_demo.py  run_population_demo.py
src/ballista/: __init__.py  contracts.py  definitions.py  engine.py  examples.py  expression.py  models.py  nodes.py  registry.py  validation.py
tests/: test_engine.py
