[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ballista"
version = "0.1.0"
description = "Composable metaheuristic engine prototype for Ballista"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Doruk and Codex" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
